# BrickDuino

./: Blocks.json  Blocks.simple.json  CMakeLists.txt  save.json
Headers/: Board.h  Brick.h  BrickDuino.h  FunctionBrick.h  Parameter.h  Shadow.h  ShafraBlock.h  StatementBrick.h  Util.h  Value.h
Headers/Brick/: Brick.h  FunctionBrick.h  IPaintableBrick.h  PaintableBrick.h  Statement.h  StatementBrick.h
Headers/Brick/Toolbox/: ToolboxBrick.h  ToolboxFunctionBrick.h  ToolboxStatementBrick.h  ToolboxValueBrick.h
Headers/Brick/Workspace/: FunctionBrick.h  LiteralValueBrick.h  Parameter.h  Shadow.h  StatementBrick.h  Value.h  ValueBrick.h  WorkspaceBrick.h
Headers/Bricks/: Brick.h  FunctionBrick.h  IBrick.h  Parameter.h  StatementBrick.h  Value.h
Headers/Compiler/: Compiler.h
Headers/Components/: LineEdit.h
Headers/Exception/: TypeMatchException.h
Headers/Painter/: BinaryOperatorPainter.h  FunctionBrickPainter.h  IPaintableBrick.h  IPainter.h  StatementBrickPainter.h  ValueBrickPainter.h
Headers/Screens/: ConfigBrickIf.h  ModalNewVariable.h
Headers/Toolbox/: Spoiler.h  ToolboxBrick.h
Sources/: Board.cpp  Brick.cpp  BrickDuino.cpp  FunctionBrick.cpp  Main.cpp  Parameter.cpp  Shadow.cpp  ShafraBlock.cpp  StatementBrick.cpp  Util.cpp  Value.cpp  cpp_grammar.json  pascal_grammar.json  python_grammar.json
Sources/Brick/: Brick.cpp  FunctionBrick.cpp  PaintableBrick.cpp  Shadow.cpp  Statement.cpp  StatementBrick.cpp
Sources/Brick/Toolbox/: ToolboxBrick.cpp  ToolboxFunctionBrick.cpp  ToolboxStatementBrick.cpp  ToolboxValueBrick.cpp
Sources/Brick/Workspace/: FunctionBrick.cpp  LiteralValueBrick.cpp  Parameter.cpp  Shadow.cpp  StatementBrick.cpp  Value.cpp  ValueBrick.cpp  WorkspaceBrick.cpp
Sources/Bricks/: Brick.cpp  FunctionBrick.cpp  Parameter.cpp  StatementBrick.cpp  Value.cpp
Sources/Compiler/: Compiler.cpp
Sources/Components/: LineEdit.cpp
Sources/Painter/: BinaryOperatorPainter.cpp  FunctionBrickPainter.cpp  StatementBrickPaintar.cpp  StatementBrickPainter.cpp  ValueBrickPainter.cpp
Sources/Screens/: ConfigBrickIf.cpp  ModalNewVariable.cpp
Sources/Toolbox/: Spoiler.cpp  ToolboxBrick.cpp
